...
                        <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yO6-ZS-cCh">
                                <rect key="frame" x="20" y="35" width="374" height="24"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Mp-Ce-Y4o" userLabel="Placeholder">
...
                            <constraint firstItem="Kkd-fC-CIQ" firstAttribute="top" secondItem="yBv-S3-pfG" secondAttribute="bottom" id="oAh-0v-1Yl"/>
                            <constraint firstItem="ykf-nT-WBf" firstAttribute="leading" secondItem="7TR-Pl-wBr" secondAttribute="leadingMargin" id="vhc-lX-0md"/>
                            <constraint firstItem="yBv-S3-pfG" firstAttribute="top" secondItem="02G-6h-pXs" secondAttribute="bottom" id="xfD-fQ-WyV"/>
                            <constraint firstItem="yBv-S3-pfG" firstAttribute="width" secondItem="7TR-Pl-wBr" secondAttribute="width" id="yNb-LP-Wci"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Shopping" image="shopping_list" id="r8e-0r-Qzg" userLabel="Shopping"/>
                    <connections>
                        <outlet property="tableView" destination="l5R-dI-J9I" id="jlS-MA-sZF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Cd1-uJ-wBU" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
            <point key="canvasLocation" x="760.79999999999995" y="-508.69565217391306"/>
        </scene>
        <!--Cook Time-->
        <scene sceneID="8ET-ZA-G5U">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mov-sb-vSr" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Cook Time" image="skill_level " id="cPa-gy-q4n"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="48j-Wr-OCy">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
